@startuml
'https://plantuml.com/class-diagram

class InventoryTracker {
    start()
    main()
}

class MainWindowController {
    items: ItemModel
    scenes: SceneManager

    + MainWindowController(ItemModel, SceneManager)

    addItemButtonClicked(EventHandler)
    editItemButtonClicked(EventHandler)
    removeItemButtonClicked(EventHandler)

    addItem(String, String, BigDecimal)
    addItem()

    saveInventoryAsCSV(filename: String)
    saveInventoryAsHTML(filename: String)
    saveInventoryAsJSON(filename: String)
}

class AddItemWindowController {

}

class EditItemWindowController {

}

class RemoveItemWindowController {

}

class SearchItemWindowController {

}

class ItemModel {
    - ObservableList<Item>
}

class Item {
    - name: SimpleStringProperty
    - serialNumber: SimpleStringProperty
    - value: SimpleDoubleProperty

    + getName()
    + setName()
    + nameProperty()
    + getSerialNumber()
    ...
}

class Exporter {
    exportCSV(filename: String, data: String)
    exportJSON(filename: String, data: String)
    exportHTML(filename: String, data: String)
}

class Importer {
    importCSV(filename: String, data: String)
    importJSON(filename: String, data: String)
    importHTML(filename: String, data: String)
}

file Output {

}

file Input {

}

MainWindowController o-- FileManager
openjfx.org.Applciation <|-- InventoryTracker
InventoryTracker -- ItemModel
Importer -- Input
Exporter -- Output
MainWindowController o-- ItemModel
ItemModel -- Exporter
ItemModel -- Importer
SearchItemWindowController o-- ItemModel
RemoveItemWindowController o-- ItemModel
EditItemWindowController o-- ItemModel
AddItemWindowController o-- ItemModel
ItemModel *-- Item


@enduml